--- a/Makefile.maint
+++ b/Makefile.maint
@@ -33,7 +33,7 @@ my-distcheck:
 	mkdir $(t)
 	GZIP=$(GZIP) $(TAR) -C $(t) -zxf $(distdir).tar.gz
 	cd $(t)/$(distdir) \
-	  && ./configure --with-gd=no --with-png=no --with-lisp-files --with-tutorial \
+	  && ./configure --with-gd=no --with-qt=no --with-tutorial \
 	  && $(MAKE) CFLAGS='-Wformat -Werror' \
 	  && $(MAKE) dvi \
 	  && $(MAKE) check \
@@ -99,3 +99,7 @@ amfiles:
 	for subdir in config demo m4 term tutorial ; do \
 	  make -C $$subdir -f Makefile.am.in Makefile.am ; \
 	done
+
+ReleaseNotes.html: RELEASE_NOTES
+	txt2html -pm --style_url ReleaseNotes.css RELEASE_NOTES \
+	         --outfile ReleaseNotes.html
