--- a/config/watcom/Makefile
+++ b/config/watcom/Makefile
@@ -1,5 +1,5 @@
 # Hello, emacs: this is a -*- Makefile -*-
-# $Id: Makefile,v 1.21 2017-08-03 05:57:28 markisch Exp $
+# $Id: Makefile,v 1.22 2017-08-04 18:33:26 broeker Exp $
 #
 # GNUPLOT Makefile OpenWatcom 1.3 on Win32
 
@@ -139,8 +139,8 @@ LDLIBS += LIBRARY d2d1.lib LIBRARY dwrite.lib
 # -j  : char is signed
 # -aa : allow non-const initializers for locals
 # -d2 : debug information
-WCFLAGS = -zlf -ei -zq -I$(S);$(W) -zm -bm -5r -sg -orilt -j -aa -d2 $(CPPFLAGS) $(OPTS)
-WPPFLAGS = -zlf -ei -zq -I$(S);$(W) -zm -bm -5r -sg -orilt -j -d2 $(CPPFLAGS) $(OPTS)
+WCFLAGS = -zlf -ei -zq -I$(S);$(W) -zm -bm -5r -sg -orilt -aa -d2 $(CPPFLAGS) $(OPTS)
+WPPFLAGS = -zlf -ei -zq -I$(S);$(W) -zm -bm -5r -sg -orilt -d2 $(CPPFLAGS) $(OPTS)
 # removed: -za99
 
 # ...and here.
